--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8">
     <title>Peter's</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link id="favicon" rel="shortcut icon" type="image/png" href="favicon.png">
   </head>
   <body>
   <h1> My web page </h1>
-  <h2> Pictures from RPI </h2>
+  <h2> Pictures from RPI </h2> 
+  <p>Japanese example: ご飯が熱い。</p>
+  <p> here is some <strong> text </strong>
+  <!-- comment -->
+  <a href="https://www.amazon.com"  title ="shop here"> shop now </a> </p>
     <img src="images/rpi-25.jpg" alt="My test image">
     <button>Change user</button>
     <script src="scripts/script.js"></script>
   </body>
-</html>
+<!-- </html> -->
