--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Peter's</title>
+    <title>Peter's Site</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link id="favicon" rel="shortcut icon" type="image/png" href="favicon.png">
+    <link id="favicon" rel="shortcut icon" type="image/png" href="picon.png">
   </head>
   <body>
-  <h1> My web page </h1>
-  <h2> Pictures from RPI </h2> 
-  <p>Japanese example: ご飯が熱い。</p>
-  <p> here is some <strong> text </strong>
-  <!-- comment -->
-  <a href="https://www.amazon.com"  title ="shop here"> shop now </a> </p>
+  <header>
+      <h1>Peter's Site</h1>
+  </header>
+      <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="projects/index.html">Projects</a></li>
+        <li><a href="#">Archive</a></li>
+      </ul>
+      </nav>
+      <main>
+      <article>
+	  <h1> A visit to Troy New York</h1>
+	  <h2> Spring Convocation at RPI </h2>
+	  <p></p>
+	  <p> Convocation was on May 20<sup>th</sup> this year. More details can be found here:
+  <a href="https://www.rpi.edu"  title ="RPI web site"> RPI </a> </p>
+  <hr>
     <img src="images/rpi-25.jpg" alt="My test image">
+    <hr>
+    </article>
+    <aside>
+        <h2>Related</h2>
+
+        <ul>
+          <li><a href="http://www.troyny.gov">The City of Troy</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Troy,_New_York">Wikipedia Article about Troy</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/History_of_Troy,_New_York">A History of Troy</a></li>
+          <li><a href="https://www.bing.com/maps?&ty=18&q=Troy%2c%20NY&vdpid=5486480213300740097&mb=42.8317284632082~-73.89898300170894~42.65775824988085~-73.45541000366206&ppois=42.7448043823242_-73.6771965026855_Troy%2c%20NY_~&cp=42.7448043823242~-73.6771965026855&v=2&sV=1&FORM=MIRE&qpvt=bing+map+troy+ny&style=r&trfc=&lvl=11">How to get there</a></li>
+        </ul>
+      </aside>
+    </main>
     <button>Change user</button>
+    <footer>
+      <p>©Copyright 2017. All rights reversed.</p>
+    </footer>
     <script src="scripts/script.js"></script>
   </body>
-<!-- </html> -->
+</html>
