--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Peter's Site</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <link id="favicon" rel="shortcut icon" type="image/png" href="images/picon.png">
+    <link id="favicon" rel="shortcut icon" type="image/png" href="images/picon.PNG">
   </head>
   <body>
   <header>
